FIX: Texts Changed
Current texts changed with new content which provided from content editor.

--- a/src/about-us.twig
+++ b/src/about-us.twig
@@ -14,8 +14,13 @@
                         <div class="section-title">
                             <h2>Biz Kimiz ?</h2>
                             <p>
-                                Şirketimiz, 0000 yılında Çarşı Menkul Değerler A.Ş. unvanı ile kurulmuştur. Foreks işlemleri konusunda Geniş yetkili aracı kurum olarak faaliyetine devam eden şirketimiz, 2019 yılı itibariyle dar yetkili aracı kurum kapsamında faaliyetine devam etmektedir.
+                                ÇarşıFX, 1988 yılından itibaren Kapalıçarşı'da muhtelif dükkanlarda faaliyet gösteren sarrafiye ve döviz işi ile ilgilenen kuyumcu ve döviz büroları tarafından ortak olarak kurulmuştur. Güçlü kuruluş sermayesi ve sağlam likiditesi ile sektörde on yıllardır faaliyet gösteren tecrübeli döviz büroları bu tecrübelerini online alım-satım platformları ile de taçlandırmak istemektedir.
                             </p>
+
+                            <p>
+                                Hem alaylı hem de mektepli ekolden gelen ve 3 nesil boyunca döviz ve sarraf işleri ile iştigal olan ortaklığımız, sektörde en iyi bildiğimiz, esnaf-tüccar yaklaşımını online işlem platformlarına da getirmektedir.
+                            </p>
+
                         </div>
 
                     </div>
@@ -35,7 +40,8 @@
                     <div class="section-title text-center">
                         <h2>Başarılarımız</h2>
                         <p>
-                            Yatırımcılarımız, İngilizce ve Türkçe dil destekli yeni nesil teknolojiyle işlem yapabilmek için kullanıcı dostu bu en yeni nesil platformandan yararlanılabilir.Fiyat,grafik analiz ve ürün özellikleri gibi araçlara en güvenilir ve hızla erişim sağlayabilir.
+                            Hizmet kalitemizde mükemmelliği hedefliyoruz ve uluslararası kurumlar tarafından ödüllendiriliyoruz. <br />
+                            ÇarşıFX, uluslararası prestijli kurumlar tarafından yıllar içinde farklı ödüllere layık görüldü.
                         </p>
                     </div>
 
@@ -84,11 +90,10 @@
                             <img src="images/icon_5-24_acik_piyasa.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
                         </div>
                         <div class="title">
-                            5/24 Açık Piyasa
+                            Hızlı Emir İletimi
                         </div>
                         <div class="description">
-                            Bu piyasa uyumuyor; hafta içi 5 gün 24 saat, günün her anında kaldıraçlı yatırım
-                            işlemleri yapın.
+                            ÇarşıFX forex platformında 30ms civarında bir hız ile emir iletimi gerçekleştirilmektedir. Bu emir iletim hızı, şuanda bankalar arası piyasadaki hıza eşdeğerdir.
                         </div>
                     </div>
                 </div>
@@ -99,11 +104,10 @@
                             <img src="images/icon_5-24_acik_piyasa.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
                         </div>
                         <div class="title">
-                            5/24 Açık Piyasa
+                            Güçlü Sermaye Yapısı
                         </div>
                         <div class="description">
-                            Bu piyasa uyumuyor; hafta içi 5 gün 24 saat, günün her anında kaldıraçlı yatırım
-                            işlemleri yapın.
+                            ÇarşıFX ortaklığı, 30milyon USD'dan fazla, güçlü sermaye ve likidite yapısı ile yatırımcılarına güven vermektedir.
                         </div>
                     </div>
                 </div>
@@ -114,11 +118,10 @@
                             <img src="images/icon_5-24_acik_piyasa.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
                         </div>
                         <div class="title">
-                            5/24 Açık Piyasa
+                            Gerçek STP Platformu
                         </div>
                         <div class="description">
-                            Bu piyasa uyumuyor; hafta içi 5 gün 24 saat, günün her anında kaldıraçlı yatırım
-                            işlemleri yapın.
+                            Emirleriniz; Barclays Bank LLC, FXCM, HotSpotFX gibi dünyaca ünlü prime brokerlarda STP olarak karşılık bulmaktadır. ÇarşıFX, gerçektne yatırımcısının yanında.
                         </div>
                     </div>
                 </div>
@@ -129,11 +132,10 @@
                             <img src="images/icon_5-24_acik_piyasa.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
                         </div>
                         <div class="title">
-                            5/24 Açık Piyasa
+                            Dar Spreadler
                         </div>
                         <div class="description">
-                            Bu piyasa uyumuyor; hafta içi 5 gün 24 saat, günün her anında kaldıraçlı yatırım
-                            işlemleri yapın.
+                            0.5'den başlayan EURUSD spreadleri ile dar ve rekabetçi spreadleri ile ÇarşıFX'de işlem yapmak rahatlık ve kolaylık sağlar.
                         </div>
                     </div>
                 </div>
@@ -144,11 +146,10 @@
                             <img src="images/icon_5-24_acik_piyasa.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
                         </div>
                         <div class="title">
-                            5/24 Açık Piyasa
+                            Gram Altın ve Sarrafiyeler
                         </div>
                         <div class="description">
-                            Bu piyasa uyumuyor; hafta içi 5 gün 24 saat, günün her anında kaldıraçlı yatırım
-                            işlemleri yapın.
+                            Sektörde ilk kez ÇarşıFX'de Çeyrek Altın, Yarım Altın, Tam Altın ve Gram Altın alınıp satılabilmektedir.
                         </div>
                     </div>
                 </div>
@@ -159,11 +160,10 @@
                             <img src="images/icon_5-24_acik_piyasa.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
                         </div>
                         <div class="title">
-                            5/24 Açık Piyasa
+                            Çeşitli Hisse Senetleri
                         </div>
                         <div class="description">
-                            Bu piyasa uyumuyor; hafta içi 5 gün 24 saat, günün her anında kaldıraçlı yatırım
-                            işlemleri yapın.
+                            Başta Avrupa olmak üzere, ABD ve Asya hisse senetleri ÇarşıFX bünyesinde alınıp satılabilmekte. Temettü gelirleri elde edilebilmektedir.
                         </div>
                     </div>
                 </div>
