--- a/src/analysis.twig
+++ b/src/analysis.twig
@@ -12,9 +12,10 @@
                     <div class="slider-content">
 
                         <div class="section-title">
-                            <h2>Eur/Usd Tahmini ve Haberler</h2>
+                            <h2>Günlük Piyasa Analizi</h2>
                             <p>
-                                Günün en yeni Euro Dolar, EUR/USD paritesi yorumları ile teknik analizlerini aşağıda sıralı halde görebilirsiniz. Kurum ve uzmanlardan gelen en son yorum en üstte yer almaktadır.
+                                ÇarşıFX'in uzman kadrosunun hazırladığı günlük forex bültenleri ile, dolarda, altında, euroda ne yapacağınızı bilirsiniz. Her gün 5 farklı döviz çiftinde ve altın ile gümüş ürünlerinde taze analizler sabah kapınıza gelir. Uyumadan hareket eden piyasalarda bir dakika bile vakit kaybetmemiş olursunuz.
+
                             </p>
                         </div>
 
@@ -82,9 +83,7 @@
 
 
     <!-- include footer -->
-
     {% include "./layouts/footer.twig" %}
-
     <!-- include footer -->
 
 {% endblock %}
