--- a/src/contact.twig
+++ b/src/contact.twig
@@ -14,7 +14,8 @@
                         <div class="section-title">
                             <h2>Bize Ulaşın</h2>
                             <p>
-                                Aşağıda yer alan iletişim kanallarımızı kullanarak veya iletişim formumuzu kullanarak bize hızlıca ulaşabilirsiniz.
+                                ÇarşıFX olarak daima bize ulaşabilmenizi istiyoruz. Piyasalar hakkında öğrenmek istediklerinizi bize sorabilir, de yatırımlarınıza nasıl yön vermek istediğinizi bizimle paylaşabilirsiniz. Eğer memnuniyetsizlik yaşadığınız bir durum olur ise, bunu da bizimle paylaşmanızı rica ederiz.
+
                             </p>
                         </div>
 
@@ -33,9 +34,9 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
                     <div class="section-title text-center">
-                        <h2>Lorem ipsum dolar sit amet</h2>
+                        <h2>ÇarşıFX Hep Yanınızda</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            ÇarşıFX uzman kadrosu ile 5 gün 24 saat hep ekran başında ve hep sizin yanınızda. Gece-gündüz. Daima.
                         </p>
                     </div>
 
@@ -90,7 +91,7 @@
 
                             <div class="section-title">
                                 <h2>İletişim Bilgilerimiz</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                                <p>Aşağıdaki iletişim kanallarından 5 gün 24 saat bize ulaşabilir ve mesajınızı bizimle paylaşabilirsiniz.</p>
                             </div>
 
                             <div class="contact-details">
@@ -98,15 +99,15 @@
                                 <ul class="list-unstyled">
                                     <li>
                                         <span class="label">Mail</span>
-                                        <a href="mailto://info@carsifx.com">info@carsifx.com</a>
+                                        <a href="mailto://support@carsifx.com">support@carsifx.com</a>
                                     </li>
                                     <li>
                                         <span class="label">Telefon</span>
-                                        <a href="tell://0090212000000">+90 212 000 00 00</a>
+                                        <a href="tell://0090212000000">+971 4 294 1392</a>
                                     </li>
                                     <li>
                                         <span class="label">Adres</span>
-                                        <a href="tell://0090212000000">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</a>
+                                        <a href="ajavascript:;">Business Center,Street # 8, 25th Flooer, Near Deira City Centre Dubai - Dubai - United Arab Emirates</a>
                                     </li>
                                 </ul>
 
