--- a/src/index.twig
+++ b/src/index.twig
@@ -98,7 +98,8 @@
                         ÇarşıFX, Forex piyasasının kullanışlı ve hızlı; son teknoloji işlem platformlarını sizlerle buluşturuyor!
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. tempor  incididunt ut labore et dolore magna
+                        Yatırım sektöründe yatırımcıların en fazla tercih ettiği işlem plaltformu olan Metatrader ile ister evinizden veya işyerinizden masataüstü terminali kullanarak, isterseniz dışarda dilediğiniz yerden akıllı mobil ve tablet cihazlarınızdan işlem yapabilme özgürlüğüne sahipsiniz.
+
                     </p>
                 </div>
 
@@ -207,10 +208,14 @@
                 <div class="section-title">
                     <h2>Neden ÇarşıFX?</h2>
                     <p>
-                        ÇarşıFX, Forex piyasasının kullanışlı ve hızlı; son teknoloji işlem platformlarını sizlerle buluşturan bir aracı kurumdur.
+                        ÇarşıFX, forex piyasasının kullanışlı ve hızlı; son teknoloji işlem platformlarını sizlerle buluşturan bir forex ve emtia aracı kurumudur.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. tempor  incididunt ut labore et dolore magna
+                        Yılların döviz, sarrafiye ve emtia birikimini siz yatırımcılarına getiren ÇarşıFX, gerek fixiki alım satımlarınızda gerek ise ekran üzerinden yapacağınız işlemlerde yatırımcının
+                        güvenilir, hızlı ve tecrübeli partneri olmak üzere yola çıkmıştır.
+                    </p>
+                    <p>
+                        100'lerce döviz çifti ve onlarca emtia ürününde işlem yapabilme seçeneğini ÇarşıFX'de bulabilirsiniz.
                     </p>
 
                     <a class="btn btn-info btn-why-us">Detay</a>
@@ -342,69 +347,9 @@
     </div>
 </section>
 
-<section class="section-register-steps">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="section-title text-center">
-                    <h2>Çarşı FX ile forex’e kolayca başlangıç yapın</h2>
-                    <p style="width: 80%; margin:20px auto;">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 steps-container">
-
-                <div class="step-card step-1">
-                    <div class="step-outer step-bg-primary">
-                        <div class="step-inner">
-                            <span class="step-num">1</span>
-                        </div>
-                    </div>
-                    <div class="step-title">
-                        Kayıt Formunu Doldurun
-                    </div>
-                    <div class="description">
-                        Hemen üye olun ve Kale ÇarşıFX’i $000 sanal para ile deneyin.
-                    </div>
-                </div>
-
-                <div class="step-card step-2">
-                    <div class="step-outer step-bg-info">
-                        <div class="step-inner">
-                            <span class="step-num">2</span>
-                        </div>
-                    </div>
-                    <div class="step-title">
-                        Onay İşlemini Tamamlayın
-                    </div>
-                    <div class="description">
-                        Gerekli dökümanları sisteme yükleyin ve hesabınızı onaylayın.
-                    </div>
-                </div>
-
-                <div class="step-card step-3">
-                    <div class="step-outer step-bg-secondary">
-                        <div class="step-inner">
-                            <span class="step-num">3</span>
-                        </div>
-                    </div>
-                    <div class="step-title">
-                        Yatırıma Başla
-                    </div>
-                    <div class="description">
-                        Kale Fx’in zengin yatırım çeşitliliğinde yatırımlarınızı yönetin.
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-    </div>
-</section>
+<!-- include register steps component -->
+    {% include './layouts/components/register-steps.twig' %}
+<!-- end include register steps component -->
 
 <section class="section-mobile-actions">
     <div class="container">
@@ -413,7 +358,7 @@
                 <div class="section-title">
                     <h2>Mobilde İşlem Yapın</h2>
                     <p>
-                        Çarşı FX müşterileri MetaTrader 4 ve MetaTrader 5 işlem platformunu ve mobil uygulamalarını PDA, iOS ve Android için indirebilirler.
+                        ÇarşıFX müşterileri Metatrader5 Mobil platformların ayrıcalıklarını yaşayarak, her zaman, her yerde yatırımlarını doğru bir şekilde yönlendirebilir.
                     </p>
                 </div>
 
