--- a/src/layouts/components/register-steps.twig
+++ b/src/layouts/components/register-steps.twig
@@ -3,9 +3,9 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="section-title text-center">
-                    <h2>Çarşı FX ile forex’e kolayca başlangıç yapın</h2>
+                    <h2>ÇarşıFX ile forex’e kolayca başlangıç yapın</h2>
                     <p style="width: 80%; margin:20px auto;">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
+                        ÇarşıFX, on yıldan fazladır döviz ve sarrafiye hizmeti veren, hem alaylı hem okullu döviz ve altın piyasası tecrübeli bir ekip tarafından kurulmuştur.
                     </p>
                 </div>
             </div>
@@ -24,7 +24,7 @@
                         Kayıt Formunu Doldurun
                     </div>
                     <div class="description">
-                        Hemen üye olun ve Kale ÇarşıFX’i $000 sanal para ile deneyin.
+                        Hemen üye olun ve ÇarşıFX'in 10.000'lık sanal parası ile gerçek piyasada işlem yapın.
                     </div>
                 </div>
 
@@ -38,7 +38,7 @@
                         Onay İşlemini Tamamlayın
                     </div>
                     <div class="description">
-                        Gerekli dökümanları sisteme yükleyin ve hesabınızı onaylayın.
+                        Dokümanlarınızı bizimle paylaşın ve onay sürecini bitirin.
                     </div>
                 </div>
 
@@ -52,7 +52,7 @@
                         Yatırıma Başla
                     </div>
                     <div class="description">
-                        Kale Fx’in zengin yatırım çeşitliliğinde yatırımlarınızı yönetin.
+                        CarşıFX'in profesyonel ekibinin desteği ile işleme ve kazanmaya başlayın.
                     </div>
                 </div>
 
