--- a/src/layouts/footer.twig
+++ b/src/layouts/footer.twig
@@ -16,7 +16,7 @@
 
                          <div class="footer-block img-block align-self-center">
                              <a href="javascript:;">
-                                 <img src="images/carsi_footer_logo.svg" class="img-fluid" alt="Çarşı FX Logo"/>
+                                 <img src="images/carsi_footer_logo.svg" class="img-fluid" alt="ÇarşıFX Logo"/>
                              </a>
                          </div>
 
@@ -87,14 +87,14 @@
 
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 risk-warning-box">
 
-                    <span class="risk-warning">Risk Uyarısı:</span>
+                    <span class="risk-warning">Risk Feragatnamesi</span>
 
                     <p>
-                        All financial products traded on margin carry a high degree of risk to your capital. They are not suited to all investors and you can lose more than your initial deposit. Please ensure that you fully understand the risks involved and seek independent advice if necessary. For further information, please see our full Risk Warning, Terms of Business and Privacy Policy.
+                        Risk Uyarısı : Kaldıraçlı alım satım (Foreks) işlemleri; düşük teminatlarla büyük miktarlı pozisyonların alınabildiği yüksek oranda risk içeren işlemlerdir. Kaldıraçlı alım satım işlemleri sonucunda kâr elde edebileceğiniz gibi zarar riskiniz de bulunmaktadır. Foreks işlemleri , yatırılan paranın tamamını kaybetme riski içerdiğinden her yatırımcı için uygun bir piyasa olmayabilir.Bu nedenle işlem yapmaya karar vermeden önce karşılaşabileceğiniz riskleri anlamanız ve kısıtlarınızı dikkate alarak karar vermeniz gerekmektedir.
                     </p>
 
                     <p>
-                        We use cookies to support features like login and allow trusted media partners to analyse aggregated site usage. Keep cookies enabled to enjoy the full site experience. By browsing our site with cookies enabled, you are agreeing to their use. Review our cookies information for more details
+                        www.carsifx.com internet sitesindeki her türlü iç ve dış piyasa tablo ve grafikler, bu konularda hizmet veren üçüncü kişi kurumlardan elde edilmiş olup, CarşıFX  tarafından herhangi bir maddi menfaat beklentisi olmaksızın genel anlamda bilgilendirmek amacıyla hazırlanmıştır. İnternet sitemizde bulunan iç ve dış piyasalara ait tablo ve grafiklerin doğrulukları tarafımızca garanti edilmemekte birlikte, bilgiler belli bir gelirin sağlanmasına yönelik olarak verilmemektedir.
                     </p>
 
                 </div>
@@ -116,21 +116,21 @@
                             <span class="icon-separator">
                                 <i class="fa fa-map-marker contact-icon" aria-hidden="true"></i>
                             </span>
-                            <span class="text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                            <span class="text"> Business Center,Street # 8, 25th Flooer, Near Deira City Centre Dubai - Dubai - United Arab Emirates</span>
                         </li>
 
                         <li>
                             <span class="icon-separator">
                                 <i class="fa fa-phone contact-icon" aria-hidden="true"></i>
                             </span>
-                            +00 (0) 00 00 00000
+                            +971 4 294 1392
                         </li>
 
                         <li>
                             <span class="icon-separator">
                                 <i class="fa fa-envelope-o contact-icon" aria-hidden="true"></i>
                             </span>
-                            support@Lorem.com
+                            support@carsifx.com
                         </li>
 
                     </ul>
