--- a/src/layouts/header.twig
+++ b/src/layouts/header.twig
@@ -7,7 +7,7 @@
                 <div class="logo">
                     <a href="index.html">
                         <img src="images/carsi_logo.png"
-                             class="img-fluid"  alt="Çarşı FX Logo"/>
+                             class="img-fluid"  alt="ÇarşıFX Logo"/>
                     </a>
                 </div>
             </div>
@@ -15,13 +15,25 @@
             <div class="col-6 col-xs-6">
                 <div class="main-menu">
                     <nav role="navigation">
-                        <a class="active" href="account-actions.html">Hesap İşlemleri</a>
-                        <a href="invest-tools.html">Yatırım Araçları</a>
-                        <a href="platforms.html">Platform</a>
-                        <a href="analysis.html">Analiz</a>
-                        <a href="about-us.html">Şirket</a>
-                        <a href="announcements.html">Duyurular</a>
-                        <a href="contact.html">Destek</a>
+                        <ul class="list-unstyled list-inline">
+                            <li><a class="active" href="account-actions.html">Hesap İşlemleri</a></li>
+                            <li><a href="invest-tools.html">Yatırım Araçları</a></li>
+                            <li><a href="platforms.html">Platform</a></li>
+                            <li class="dropdown">
+                                <a href="analysis.html" class="dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Analiz</a>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <a href="analysis.html">USD/JPY</a>
+                                    <a href="analysis.html">GBP/USD</a>
+                                    <a href="analysis.html">EUR/USD</a>
+                                    <a href="analysis.html">NZD/USD</a>
+                                    <a href="analysis.html">USD/CHF</a>
+                                </div>
+                            </li>
+                            <li><a href="about-us.html">Şirket</a></li>
+                            <li><a href="economic-calendar.html">Ekonomik Takvim</a></li>
+                            <li><a href="announcements.html">Duyurular</a></li>
+                            <li><a href="contact.html">Destek</a></li>
+                        </ul>
                     </nav>
                 </div>
             </div>
@@ -87,7 +99,7 @@
     <div class="logo">
         <a href="index.html">
             <img src="images/carsi_logo.png"
-                 class="img-fluid"  alt="Çarşı FX Logo"/>
+                 class="img-fluid"  alt="ÇarşıFX Logo"/>
         </a>
     </div>
 
