FIX: Footer UI Fixes
- Texts aligned justify
- Removed extra right padding in social links

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -84,6 +84,7 @@ footer {
       font-size:12px;
       margin-top:20px;
       color:$footer-link-color;
+      text-align:justify;
       .risk-warning {
         font-weight: bold;
       }
@@ -136,9 +137,10 @@ footer {
 
     .contact-info {
       font-family: $base-font-family;
-      fonts-size:12px;
+      // font-size:12px;
       margin-top:10px;
       color:$footer-link-color;
+      margin-left:-20px;
 
       li {
         display: inline-block;
@@ -181,6 +183,9 @@ footer {
         display:inline-block;
         padding:0 20px;
         font-size:25px;
+        &:last-child {
+          padding-right:0;
+        }
       }
 
       @media screen and (max-width:$x-small) {
