--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -3,9 +3,29 @@ header {
   padding:15px 20px;
   background: rgba(250, 250, 250, .97);
   box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, 0.1);
+
+  .logo {
+    margin-top: 7px;
+  }
+
   .main-menu {
     margin-left:235px;
-    margin-top:5px;
+    margin-top:7px;
+    li {
+      display: inline-block;
+
+      .dropdown-toggle::after {
+        display:none;
+      }
+
+      .dropdown-menu {
+        margin-top: 10px;
+        margin-left: 20px;
+        padding: 10px 0;
+        text-align: left;
+      }
+
+    }
     a {
       color:$header-nav-color;
       font-family: $base-font-family;
@@ -13,6 +33,7 @@ header {
       font-weight: normal;
       display:inline-block;
       padding:0 20px;
+      position:relative;
     }
     a.active {
       color:$primary;
@@ -73,6 +94,14 @@ header {
       font-size: 14px;
     }
 
+  }
+
+  .dw-menu {
+    position:absolute;
+    list-style:none;
+    a {
+      padding:0;
+    }
   }
 
 }
