--- a/src/layouts/header.twig
+++ b/src/layouts/header.twig
@@ -22,11 +22,11 @@
                             <li class="dropdown">
                                 <a href="analysis.html" class="dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Analiz</a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a href="analysis.html">USD/JPY</a>
-                                    <a href="analysis.html">GBP/USD</a>
-                                    <a href="analysis.html">EUR/USD</a>
-                                    <a href="analysis.html">NZD/USD</a>
-                                    <a href="analysis.html">USD/CHF</a>
+                                    <a href="analysis-detail.html">USD/JPY</a>
+                                    <a href="analysis-detail.html">GBP/USD</a>
+                                    <a href="analysis-detail.html">EUR/USD</a>
+                                    <a href="analysis-detail.html">NZD/USD</a>
+                                    <a href="analysis-detail.html">USD/CHF</a>
                                 </div>
                             </li>
                             <li><a href="about-us.html">Şirket</a></li>
@@ -118,13 +118,24 @@
         </a>
     </div>
     <nav>
-        <a href="javascript:;">Özellikler</a>
-        <a href="platforms.html">Platform</a>
-        <a href="javascript:;">Analiz</a>
-        <a href="javascript:;">Şirket</a>
-        <a href="javascript:;">Duyurular</a>
-        <a href="javascript:;">Destek</a>
-        <a class="btn btn-outline-primary">Giriş Yap</a>
-        <a class="btn btn-primary">Kayıt Ol</a>
+        <ul class="list-unstyled">
+            <li><a href="account-actions.html">Hesap İşlemleri</a></li>
+            <li><a href="platforms.html">Platform</a></li>
+            <li class="dropdown">
+                <a href="javascript:;" class="dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Analiz</a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a href="analysis-detail.html">USD/JPY</a>
+                    <a href="analysis-detail.html">GBP/USD</a>
+                    <a href="analysis-detail.html">EUR/USD</a>
+                    <a href="analysis-detail.html">NZD/USD</a>
+                    <a href="analysis-detail.html">USD/CHF</a>
+                </div>
+            </li>
+            <li><a href="about-us.html">Şirket</a></li>
+            <li><a href="announcements.html">Duyurular</a></li>
+            <li><a href="contact.html">Destek</a></li>
+            <li><a class="btn btn-outline-primary">Giriş Yap</a></li>
+            <li><a class="btn btn-primary">Kayıt Ol</a></li>
+        </ul>
     </nav>
 </div>
