ADD: News Link Added
Navigation to news added

--- a/src/index.twig
+++ b/src/index.twig
@@ -255,7 +255,7 @@
                         Türkiye Cumhuriyet Merkez Bankası (TCMB) Ekim toplantısında bir hafta vadeli repo faizini sabit tutarak yüzde 10.25 seviyesinde bıraktı. TCMB, geç likidite penceresi (GLP) faizini yüzde 13.25’ten yüzde 14.75’e yükseldi. Merkez Bankası geçen ayki toplantısında politika faizini 200 bp artırmıştı.
                     </p>
 
-                    <a href="javascript:;" class="btn btn-secondary btn-detail">
+                    <a href="news-detail.html" class="btn btn-secondary btn-detail">
                         Detay
                     </a>
 
@@ -279,7 +279,7 @@
                         <span class="date-category">
                             <a class="news-category" href="javascript:;">Forex Haber</a>
                             14 November 2019 </span>
-                        <a class="news-link">
+                        <a class="news-link" href="news-detail.html">
                             Detay
                             <i data-feather="arrow-right"></i>
                         </a>
@@ -297,7 +297,7 @@
                         <span class="date-category">
                             <a class="news-category" href="javascript:;">Forex Haber</a>
                             14 November 2019 </span>
-                        <a class="news-link">
+                        <a class="news-link" href="news-detail.html">
                             Detay
                             <i data-feather="arrow-right"></i>
                         </a>
@@ -317,7 +317,7 @@
                         <span class="date-category">
                             <a class="news-category" href="javascript:;">Forex Haber</a>
                             14 November 2019 </span>
-                        <a class="news-link">
+                        <a class="news-link" href="news-detail.html">
                             Detay
                             <i data-feather="arrow-right"></i>
                         </a>
@@ -335,7 +335,7 @@
                         <span class="date-category">
                             <a class="news-category" href="javascript:;">Forex Haber</a>
                             14 November 2019 </span>
-                        <a class="news-link">
+                        <a class="news-link" href="news-detail.html">
                             Detay
                             <i data-feather="arrow-right"></i>
                         </a>
