FIX: Phone Variable Added
Phone variable added for proper UI renderin

--- a/src/account-actions.twig
+++ b/src/account-actions.twig
@@ -2,6 +2,7 @@
 
 {% block page_content %}
 
+    {% set showPhone = false %}
 
     <section class="content-slider slider-small">
         <div class="container">
