--- a/src/contact.twig
+++ b/src/contact.twig
@@ -56,33 +56,55 @@
                                 <p>İletişim bilgilerine ulaşın veta form doldurarak bize mesaj gönderebilirsiniz!</p>
                             </div>
 
-                            <div class="contact-form">
+                            <div class="contact-form form-block-container">
 
+                                <!--
                                 <div class="form-group">
                                     <label for="nameInput">İsim</label>
                                     <input type="text" class="form-control contact-input" id="nameInput" placeholder="İsminizi giriniz">
                                 </div>
+                                --->
 
-                                <div class="form-group">
-                                    <label for="surnameInput">Soyisim</label>
-                                    <input type="text" class="form-control contact-input" id="surnameInput" placeholder="Soyisminizi giriniz">
-                                </div>
+                                <form method="post" action="?" id="siteForm">
+                                    <div class="form-group">
+                                        <label for="surnameInput">İsim & Soyisim</label>
+                                        <input
+                                                type="text"
+                                                class="form-control contact-input js-form-control"
+                                                id="surnameInput"
+                                                placeholder="İsminizi ve soy isminizi giriniz"
+                                                data-required="true"
+                                                data-min="5"
+                                        />
+                                    </div>
 
-                                <div class="form-group">
-                                    <label for="emailInput">Email</label>
-                                    <input type="email" class="form-control contact-input" id="emailInput" placeholder="Email adresinizi giriniz">
-                                </div>
+                                    <div class="form-group">
+                                        <label for="emailInput">Email</label>
+                                        <input type="email"
+                                               class="form-control contact-input js-form-control"
+                                               id="emailInput"
+                                               placeholder="Email adresinizi giriniz"
+                                               data-required="true"
+                                               data-validation="email"
+                                        />
+                                    </div>
 
-                                <div class="form-group">
-                                    <label for="messageInput">Mesaj</label>
-                                    <textarea name="message" class="form-control contact-input" placeholder="Mesajınızı yazınız" id="messageInput"></textarea>
-                                </div>
+                                    <div class="form-group">
+                                        <label for="messageInput">Mesaj</label>
+                                        <textarea
+                                                name="message"
+                                                class="form-control contact-input"
+                                                placeholder="Mesajınızı yazınız"
+                                                maxlength="500"
+                                                id="messageInput"></textarea>
+                                    </div>
 
-                                <hr />
+                                    <hr />
 
-                                <div class="form-group">
-                                    <button type="button" class="btn btn-primary btn-submit">Gönder</button>
-                                </div>
+                                    <div class="form-group">
+                                        <button type="submit" class="btn btn-primary btn-submit">Gönder</button>
+                                    </div>
+                                </form>
 
                             </div>
 
