--- a/src/layouts/footer.twig
+++ b/src/layouts/footer.twig
@@ -28,6 +28,9 @@
                                  <li>
                                      <a href="about-us.html">Hakkımızda</a>
                                  </li>
+                                 <li>
+                                     <a href="contact.html">İletişim</a>
+                                 </li>
                              </ul>
                          </div>
 
@@ -74,6 +77,7 @@
                              <ul class="links list-unstyled">
                                  <li><a href="what-is-forex.html">Forex Nedir</a></li>
                                  <li><a href="faq.html">Sıkça Sorulanlar</a></li>
+                                 <li><a href="announcements.html">Duyurular</a></li>
                              </ul>
                          </div>
 
