FIX: Links Removed
Contact and announcements links are placed to related sections in footer

--- a/src/layouts/header.twig
+++ b/src/layouts/header.twig
@@ -30,9 +30,9 @@
                                 </div>
                             </li>
                             <li><a href="about-us.html">Şirket</a></li>
-                            <li><a href="economic-calendar.html">Ekonomik Takvim</a></li>
-                            <li><a href="announcements.html">Duyurular</a></li>
-                            <li><a href="contact.html">Destek</a></li>
+                            <li>
+                                <a href="analysis-detail.html">Ekonomik Takvim</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
