ADD: Date Header Added
Date header added to provide separate view for date

--- a/src/styles/pages/economic-calendar.scss
+++ b/src/styles/pages/economic-calendar.scss
@@ -69,6 +69,14 @@
       }
     }
 
+    .date-header {
+      background: rgba(169, 177, 177,.1);
+      padding:15px 10px;
+      text-align: center;
+      width: 100%;
+      font-weight: bold;
+    }
+
   }
 
   .economic-calendar-nav {
