--- a/src/economic-calendar.twig
+++ b/src/economic-calendar.twig
@@ -14,7 +14,11 @@
                         <div class="section-title">
                             <h2>2020 Ekonomik Takvim</h2>
                             <p>
-                                Temel analizin ana unsurlarından biri olan ekonomik takvim takibi, piyasada işlem gören varlıkların fiyatlarındaki değişimleri anlayabilmek ve söz konusu bu değişimlerden fayda sağlayabilmek adına büyük önem taşımaktadır.Ekonomik takvim, yatırımcılara, hangi ülkeden, hangi verinin, ne zaman açıklanacağı ile ilgili değerli bilgiler verirken, iktisadi göstergelerin önem derecesine ilişkin de kolaylıklar sağlamaktadır.
+                                Temel analizin ana unsurlarından biri olan ekonomik takvim takibi, piyasada işlem gören
+                                varlıkların fiyatlarındaki değişimleri anlayabilmek ve söz konusu bu değişimlerden fayda
+                                sağlayabilmek adına büyük önem taşımaktadır.Ekonomik takvim, yatırımcılara, hangi
+                                ülkeden, hangi verinin, ne zaman açıklanacağı ile ilgili değerli bilgiler verirken,
+                                iktisadi göstergelerin önem derecesine ilişkin de kolaylıklar sağlamaktadır.
 
                             </p>
                         </div>
@@ -116,6 +120,16 @@
                                     <span class="normal-value">-31</span>
                                 </td>
                             </tr>
+
+                            <!-- date header starts -->
+
+                            <tr>
+                                <td colspan="7" class="date-header">
+                                    2020-11-24
+                                </td>
+                            </tr>
+
+                            <!-- date header ends -->
 
                             <tr>
                                 <td>
