FIX: Link Navigation Fixed
Link navigation fixed

--- a/src/layouts/header.twig
+++ b/src/layouts/header.twig
@@ -31,7 +31,7 @@
                             </li>
                             <li><a href="about-us.html">Şirket</a></li>
                             <li>
-                                <a href="analysis-detail.html">Ekonomik Takvim</a>
+                                <a href="economic-calendar.html">Ekonomik Takvim</a>
                             </li>
                         </ul>
                     </nav>
@@ -133,9 +133,10 @@
             </li>
             <li><a href="about-us.html">Şirket</a></li>
             <li><a href="announcements.html">Duyurular</a></li>
+            <li><a href="economic-calendar.html">Ekonomik Takvim</a></li>
             <li><a href="contact.html">Destek</a></li>
             <li><a class="btn btn-outline-primary">Giriş Yap</a></li>
-            <li><a class="btn btn-primary">Kayıt Ol</a></li>
+            <li><a href="open-real-account.html" class="btn btn-primary">Kayıt Ol</a></li>
         </ul>
     </nav>
 </div>
