ADD: Slider Functionality
Slider functionality is added to homepage

--- a/src/index.twig
+++ b/src/index.twig
@@ -2,31 +2,102 @@
 
 {% block page_content %}
 
-<section class="content-slider">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<section class="home-slider">
+    <div class="owl-carousel owl-theme">
 
-                <div class="slider-content">
+        <!-- SLIDER 1 STARTS -->
 
-                    <div class="section-title">
-                        <h2>İnternetten yatırımlarınıza yön verin</h2>
-                        <p>
-                            Yüzlerce yatırım ürününde 5 gün 24 saat dilediğiniz yerde işlem yaparak yatırımlarınızı büyütebilir, Alım Satım işlemi yapabilirsiniz. Üstelik Deneme Hesabı açarak ile risksiz işlem yapabilirsiniz.
-                        </p>
+        <section class="content-slider item">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-                        <a href="javascript:;" class="btn btn-secondary btn-start-now">Gerçek hesap aç</a>
-                        <a href="javascript:;" class="btn btn-outline-secondary btn-start-now">Demo hesap aç</a>
+                        <div class="slider-content">
+                            <div class="section-title">
+                                <h2>İnternetten yatırımlarınıza yön verin</h2>
+                                <p>
+                                    Yüzlerce yatırım ürününde 5 gün 24 saat dilediğiniz yerde işlem yaparak yatırımlarınızı büyütebilir, Alım Satım işlemi yapabilirsiniz. Üstelik Deneme Hesabı açarak ile risksiz işlem yapabilirsiniz.
+                                </p>
+
+                                <a href="javascript:;" class="btn btn-secondary btn-start-now">Gerçek hesap aç</a>
+                                <a href="javascript:;" class="btn btn-outline-secondary btn-start-now">Demo hesap aç</a>
+
+                            </div>
+                        </div>
 
                     </div>
 
                 </div>
-
             </div>
-        </div>
+            <div class="slider-image" style="background:url('./images/banner_image_1.png') no-repeat;"></div>
+        </section>
+
+        <!-- SLIDER 1 ENDS -->
+
+        <!-- SLIDER 2 STARTS -->
+
+        <section class="content-slider item">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+                        <div class="slider-content">
+                            <section class="slider">
+                                <div class="section-title">
+                                    <h2>NASDAQ ve BIST’in Yıldızları ÇarşıFX’te</h2>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                    </p>
+
+                                    <a href="javascript:;" class="btn btn-secondary btn-start-now">Gerçek hesap aç</a>
+                                    <a href="javascript:;" class="btn btn-outline-secondary btn-start-now">Demo hesap aç</a>
+
+                                </div>
+                            </section>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="slider-image" style="background:url('./images/home_banner_2.png') no-repeat;"></div>
+        </section>
+
+        <!-- SLIDER 2 ENDs -->
+
+        <!-- SLIDER 3 STARTS -->
+        <section class="content-slider item">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+                        <div class="slider-content">
+                            <section class="slider">
+                                <div class="section-title">
+                                    <h2>Kripto Paralarda Fırsatları Kaçırmayın ÇarşıFX’le İşlem Yapın</h2>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                    </p>
+
+                                    <a href="javascript:;" class="btn btn-secondary btn-start-now">Gerçek hesap aç</a>
+                                    <a href="javascript:;" class="btn btn-outline-secondary btn-start-now">Demo hesap aç</a>
+
+                                </div>
+                            </section>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="slider-image" style="background:url('./images/home_banner_3.png') no-repeat;"></div>
+        </section>
+        <!-- SLIDER 3 ENDS -->
+
     </div>
-    <div class="slider-image" style="background:url('./images/banner_image_1.png') no-repeat;"></div>
 </section>
+
+
 <section class="section-boxes">
     <div class="container">
         <div class="row">
