ADD: Texts Changed
Texts changed by client demand

--- a/src/invest-tools.twig
+++ b/src/invest-tools.twig
@@ -14,7 +14,8 @@
                         <div class="section-title">
                             <h2>Yatırım Araçları</h2>
                             <p>
-                                ÇarşıFX ile yatırımcılar forex piyasası ile birlikte, değerli metaller, tarımsal emtia, petrol ve dünya borsa endekslerinde işlem yapma olanağı bulabilir.
+                                ÇarşıFX'de on yılların döviz ve sarrafiye birikimi ile size çeyrek altın, gram altın, yarım altın ürünlerini alıp satabilirsiniz. Bunların yanında diğer döviz ve emtia ürünlerinde de alım satım yapabilir, borsa endekslerinde yatırımlarınızı değerlendirebilirsiniz. ÇarşıFX, yüzlerce ürün ve ayrıcalıklı işlem platformu ile yatırımcıları ile buluşuyor.
+
                             </p>
                         </div>
 
@@ -33,7 +34,7 @@
                     <div class="section-title text-center">
                         <h2>Canlı Fiyat Akışı</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            Aşağıda farklı ürünlerin işlem koşullarını, alış satış fiyatlarını canlı olarak görebilir, ürün spreadlerini inceleyebilirsiniz. Benzersiz işlem koşulları için hemen müşteri temsilciniz ile iletişime geçin.
                         </p>
                     </div>
                 </div>
