ADD: Owl Carousel Files Added
Owl carousel files are added

--- a/src/layouts/footer_scripts.twig
+++ b/src/layouts/footer_scripts.twig
@@ -1,3 +1,5 @@
 <script src="https://code.jquery.com/jquery-latest.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.3/glider.min.js" integrity="sha512-NI5tuaiyhrV4EkyHBGHJj9uaL6uu7fz/WCoMnEwvHi8WXTKZ9f8P1v517sdTGVpT31/UEHRdLMuNdPon9F3HUg==" crossorigin="anonymous"></script>
+
+<script src="js/owl-carousel/owl.carousel.min.js"></script>
 <script src="./js/main.js"></script>
