--- a/src/layouts/head.twig
+++ b/src/layouts/head.twig
@@ -6,4 +6,7 @@
 <link rel="stylesheet" type="text/css" href="./css/style.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.3/glider.min.css" integrity="sha512-YM6sLXVMZqkCspZoZeIPGXrhD9wxlxEF7MzniuvegURqrTGV2xTfqq1v9FJnczH+5OGFl5V78RgHZGaK34ylVg==" crossorigin="anonymous" />
 
+<link rel="stylesheet" href="./js/owl-carousel/assets/owl.carousel.css">
+<link rel="stylesheet" href="./js/owl-carousel/assets/owl.theme.green.css">
+
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
