REFACTOR: Variables Order Changed
Variables order changed and listed from high px to small px

--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -45,13 +45,13 @@ $base-line-height:1.5px;
 * ----------------------------
  */
 
-$x-small    :575.98px;
-$small      :767.98px;
-$medium     :991.98px;
-$large      :1280px;
-$x-large    :1490px;
-$xx-large   :1920px;
-$xxx-large  :2560px;
+$xxx-large  :2560px; // 4K Screen
+$xx-large   :1920px; // Full HD Screen/ Large Desktop
+$x-large    :1490px; // Medium Desktop
+$large      :1280px; // Small Desktop
+$medium     :990px;  // Large Tablet
+$small      :768px;  // Medium Tablet
+$x-small    :576px;  // Smart Phones
 
 /**
 * ----------------------------
