--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -111,7 +111,7 @@ header.header-sticky {
   position: fixed;
   width: 100%;
   top:0;
-  z-index: 1;
+  z-index: 9999;
   box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, 0.1);
 
   /*
@@ -132,14 +132,14 @@ header.header-sticky {
   background:#fff;
   position: fixed;
   width:100%;
-  z-index: 1;
+  z-index: 99999999;
 
   .menu-toggle a, .home a {
     color:#000;
   }
 
   .menu-toggle, .home {
-    width:23.666666%;
+    width:22.666666%;
   }
 
   .logo { width:50%; text-align: center; }
@@ -158,7 +158,7 @@ header.header-sticky {
   background: #fff;
   width: 100%;
   height:100%;
-  z-index: 1;
+  z-index: 9999;
   padding:20px;
 
   nav  {
@@ -187,8 +187,8 @@ header.header-sticky {
     color:$primary;
   }
 
-  a.btn-outline-primary { color:$primary; width: 27%; }
-  a.btn-primary { color:#fff; width: 27%; }
+  a.btn-outline-primary { color:$primary; width: 30%; }
+  a.btn-primary { color:#fff; width: 30%; }
 
 }
 
@@ -225,7 +225,10 @@ header.header-sticky {
 @media only screen and(max-width: $x-large) {
   header {
     .main-menu {
-
+      a {
+        padding:0 10px;
+        font-size:15px;
+      }
     }
   }
 
@@ -234,17 +237,54 @@ header.header-sticky {
 @media only screen and(max-width: $large) {
   body, html { overflow-x: hidden }
   header {
+
+    .logo {
+      width:70%;
+    }
+
+    .login-register-menu {
+      margin-top:5px;
+      a {
+        width:100px;
+        font-size:12px;
+      }
+    }
     .main-menu {
       a {
-        padding:0 10px;
+        padding:0 3px;
+        font-size:12px;
       }
     }
   }
 
 }
+@media only screen and(max-width: $medium) {
+  .mobile-header { display: block; z-index: 9999; }
+  header {
+    display:none !important;
+  }
+}
+
+@media only screen and(max-width: $small) {
+
+  .mobile-header { display: block; z-index: 9999; }
+
+  header {
+    display: none !important;
+    padding:15px 0;
+    .logo {
+      width:100%;
+      text-align:center;
+      img { width: 16%; }
+      margin-bottom: 20px;
+    }
+  }
+
+}
+
 
 @media only screen and (max-width: $x-small) {
-  .mobile-header { display: block; }
+  .mobile-header { display: block; z-index: 9999; }
   header {
     display:none !important;
   }
